syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vaanalvesr.micronaut";
option java_outer_classname = "Helloworld";
option objc_class_prefix = "HLW";

package com.vaanalvesr.micronaut;

service HelloworldService {
  rpc send (HelloworldRequest) returns (HelloworldReply) {}
}

message HelloworldRequest {
  string name = 1;
}

message HelloworldReply {
  string message = 1;
}